[package]
name = "redmine-helper"
version = "0.1.0"
authors = ["Olaf Leidinger <oleid@mescharet.de>"]

# Custom settings to optimize for size
[profile.release]
incremental = false
codegen-units = 1
opt-level = "z"
panic = "abort"
lto = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
failure = "0.1"
keyring = "0.6"
reqwest = "0.9"
rpassword = "2.0.0"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
