[package]
name = "redmine-helper"
version = "0.1.1"
authors = ["Olaf Leidinger <oleid@mescharet.de>"]
edition = "2021"

# Custom settings to optimize for size
[profile.release]
incremental = false
codegen-units = 1
opt-level = "z"
panic = "abort"
lto = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
directories = "1.0"
anyhow = "1.0"
keyring = "1.1"
prettytable-rs = "0.8"
tokio = { version = "1.0.0", features = ["full", "tracing"] }
reqwest = { version = "0.11", features = ["json"] }
rpassword = "5"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
